Addressed the issue "Layout issue on event page #162"

--- a/src/app/components/events-calendar/events-calendar.component.scss
+++ b/src/app/components/events-calendar/events-calendar.component.scss
@@ -84,10 +84,13 @@
           height: 350px;
           border-radius: 3px;
           overflow: hidden;
+          cursor: pointer;
           .image-wrapper{
             height: 170px;
             background-color: lightblue;
             position: relative;
+            background-position: center;
+            background-size: cover;
             .date{
               width: 50px;
               height: 50px;
@@ -161,6 +164,7 @@
           background-size: cover;
           vertical-align: middle;
           position: relative;
+          background-position: center;
           & >span{
             display: block;
             font-weight: 800;
